frontends/web/src/containers/App.css
/*
 * Copyright (c) Facebook, Inc. and its affiliates.
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#content {
    min-height: 88vh;
}

.ul-nav {
    margin-bottom: 0;
    padding: 0;
}

.li-nav {
    list-style: none;
    padding: 1rem 1.5rem;
    margin-left: 2;
}

.second-nav-a {
    text-decoration: none;
    white-space: nowrap;
}

.cl-menu li {
    position: relative;
}

.cl-menu li a {
    display: block;
    color: #212529;
    white-space: nowrap;
}

.cl-menu li:hover a {
    color: #212529;
}

.cl-menu li ul {
    position: absolute;
    top: 0;
    left: 100%;
    border: 1px solid rgba(0, 0, 0, 0.15);
    border-radius: 0.25rem;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    display: none;
}

.cl-menu li ul li {
    white-space: nowrap;
    background: white;
    border-top: none;
    border-left: none;
    border-right: none;
}

.cl-menu > li:hover {
    background-color: rgba(18, 131, 216, 0.1);
    color: #344854;
}

.cl-menu li:hover > ul {
    display: block;
    color: #344854;
}

.cl-menu li ul li:hover {
    color: #344854;
    cursor: pointer;
}

.cl-menu li ul li:last-child {
    border-bottom: none;
}

.sidebar-wrapper {
    padding: 0;
    z-index: 2;
}

.width-auto {
    width: auto !important;
}

.inline-block {
    display: inline-block;
}

.principal-color-bg {
    background-color: #ccebd4;
}

.white-bg {
    background-color: #fff;
}

.light-gray-bg {
    background-color: #f0f2f5;
}

.light-green-bg {
    background-color: #e9ffe8;
}

.light-red-bg {
    background-color: #df4759;
}

.light-red-transparent-bg {
    background-color: rgba(223, 71, 89, 0.15);
}

.light-yellow-transparent-bg {
    background-color: rgba(251, 229, 200, 0.65);
}

.principal-color {
    color: #344854;
}

.dark-principal-color {
    color: #005798;
}

.white-color {
    color: #fff;
}

.no-chevron a::after {
    display: none;
}

.gray-color {
    color: #6e6e6e;
}

.cursor-pointer {
    cursor: pointer;
}

.button-ellipse {
    border-radius: 40px;
    font-family: 'nb_international', Helvetica Neue, Helvetica, sans-serif !important;
}

.navbar-dark .navbar-nav .nav-link {
    color: #344854;
    font-family: 'nb_international', Helvetica Neue, Helvetica, sans-serif !important;
    font-size: 1rem !important;
    font-weight: 540;
}

.navbar-dark .dropdown-menu {
    padding: 0;
}

.navbar-dark .dropdown-item:focus,
.navbar-dark .dropdown-item:hover,
.sidebar-wrapper .nav-link:focus,
.sidebar-wrapper .nav-link:hover,
.sidebar-wrapper .nav-link.active {
    background-color: rgba(18, 131, 216, 0.1);
    color: #344854;
}

.navbar-dark .navbar-nav .nav-link:focus {
    color: #344854 !important;
    font-family: 'nb_international', Helvetica Neue, Helvetica, sans-serif !important;
}

.navbar-dark .navbar-nav .nav-link:hover {
    color: #344854 !important;
    font-family: 'nb_international', Helvetica Neue, Helvetica, sans-serif !important;
}

.table {
    color: #6e6e6e;
    font-size: 12px;
}

.table td,
.table thead th {
    border-top: 0;
    padding: 5px 10px;
}

.table thead th {
    border-bottom-width: 1px;
}

.hypothesis {
    margin-bottom: 4px;
}

.flagged {
    margin-bottom: 4px;
    opacity: 0.7;
    padding: 10px;
}

.retracted {
    margin-bottom: 4px;
    opacity: 0.7;
    padding: 10px;
}

.correct {
    background-color: #28a745 !important;
    color: white;
}

.incorrect {
    background-color: #dc3545 !important;
    color: black;
}

.c3-tooltip-container {
    width: 200px;
}

.footer {
    background-color: #000;
    font-size: 14px;
    font-weight: 600;
    padding: 16px 32px 24px;
}

.footer-nav-link + .footer-nav-link {
    margin-left: 25px;
}

@media (min-width: 992px) {
    .navbar .nav-item + .nav-item {
        margin-left: 32px;
    }

    .signup-nav-link {
        padding: 0.5rem 1rem 0.5rem 1rem !important;
        cursor: pointer;
        background-color: #fff;
        color: #000;
        border: 1px solid #000;
        border-radius: 1.5rem;
    }
}

.login-fix-space {
    margin-right: -22px !important;
}

div.recharts-wrapper .recharts-layer.recharts-cartesian-axis.recharts-yAxis.yAxis g.recharts-layer.recharts-cartesian-axis-tick:first-child {
    display: none;
}

table.inspectModel {
    width: 100%;
    border: 1px solid #ddd;
    margin-top: 20px;
}

table.inspectModel td {
    padding: 5px;
}

table.inspectModel thead td {
    background: #efefef;
}

.spaced-header {
    letter-spacing: 1px;
    font-size: 0.75em;
    font-weight: bold;
}

.thick-border {
    border-width: 2px;
}

.response-warning {
    background-color: #fffcf4;
    border: 1px solid #fbe5c8;
}

.response-danger {
    background-color: #ffeff2;
    border: 1px solid #ffe5e7;
}

.card-footer .btn-light {
    background-color: #f8f9fa85;
    border-color: rgba(0, 0, 0, 0.125);
    color: inherit;
}

.modal-open {
    overflow-y: scroll !important;
    padding: 0 !important;
    background: none;
}

.btn-help-info {
    background: none !important;
    font-size: 10px !important;
    border-radius: 6px !important;
    margin-right: 3px;
}

.btn-help-info :active {
    color: #344854 !important;
}

.badge-overlay {
    font-size: 30px;
    text-align: center;
    color: white;
    font-weight: bold;
    flex: 1;
}

.modal-backdrop.badge-backdrop.show {
    opacity: 0.9;
}

.awarded-badge {
    animation: pop 0.3s linear 1;
    animation-delay: 0.4s;
    opacity: 0;
    animation-fill-mode: forwards;
}

@keyframes pop {
    0% {
        transform: scale(0);
        opacity: 0;
    }

    50% {
        transform: scale(1.2);
        opacity: 1;
    }

    100% {
        transform: scale(1);
        opacity: 1;
    }
}

.text-nav-bar {
    background: none;
    background-image: url("data:image/svg+xml;charset=utf8,<svg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'><path stroke='rgba(52,72,84, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/></svg>") !important;
    width: 7%;
    border: none;
    height: 25px;
    outline: none !important;
    margin-right: 5px;
}

@media all and (min-width: 480px) {
    .text-nav-bar {
        display: none;
    }
}

